# hotmart_rag

./: .env.example  .gitignore  HOTMART_RAG.postman_collection.json  README  README.md  docker-compose.yaml
hotmart_rag_db/: .gitignore  Dockerfile  config.py  entrypoint.sh  main.py  pyproject.toml
hotmart_rag_db/chroma/: database.py
hotmart_rag_db/routers/: database.py
hotmart_rag_llm/: .gitignore  Dockerfile  config.py  main.py  pyproject.toml
hotmart_rag_llm/llm/: chat_completion.py  rag.py
hotmart_rag_llm/routers/: chat.py
